# HexColorOutput

./: LICENSE  README.rst  example.py  pyproject.toml  readme.md  setup.py
hex_color_output.egg-info/: PKG-INFO  SOURCES.txt
hexoutput.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hexoutput_COWNEX/source/: HexOutput.py
source/hex_color_output/: HexOutput.py  color.py
source/hex_color_output.egg-info/: PKG-INFO
