[project]
name = "hexoutput_COWNEX"
version = "0.0.1"
authors = [
  { name="Cownex", email="contact@cownex.de" },
]
description = "Print Colored Text with Hexcodes!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Cownex/HexOutput"